Fix landing text size on mobile

--- a/src/components/Home/Landing/Landing.css
+++ b/src/components/Home/Landing/Landing.css
@@ -7,7 +7,7 @@
   font-size: 36px;
 }
 
-#hl-name {
+#name {
 	color: #1c45db;
 	text-transform: uppercase;
 	font-family: "maple-web", sans-serif;
@@ -27,6 +27,9 @@
 
 @media screen and (max-width: 582px) {
 	.landing-container {
-		font-size: 20px;
+		font-size: 24px;
+	}
+	#name {
+	font-size: 25px;
 	}
 }
